--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12"
 attrs = "^23.2.0"
 pydantic = "^2.7.1"
 pyyaml = "^6.0.1"
+bidict = "^0.23.1"
 
 
 [tool.poetry.group.dev.dependencies]
