--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,13 +10,18 @@ readme = "README.md"
 python = "^3.12"
 attrs = "^23.2.0"
 pydantic = "^2.7.1"
-pyyaml = "^6.0.1"
 bidict = "^0.23.1"
+ruamel-yaml = "^0.18.6"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
 ipython = "^8.24.0"
+mypy = "^1.10.0"
+black = "^24.4.2"
+ruff = "^0.4.5"
+pre-commit = "^3.7.1"
+pyright = "^1.1.364"
 
 [tool.black]
 skip-magic-trailing-comma = true
