--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ attrs = "^23.2.0"
 pydantic = "^2.7.1"
 bidict = "^0.23.1"
 ruamel-yaml = "^0.18.6"
+click = "^8.1.7"
 
 
 [tool.poetry.group.dev.dependencies]
