--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "ksem-transpiler"
+name = "ksem-transformer"
 version = "0.1.0"
 description = ""
 authors = ["Nymphana <hi@nymphana.com>"]
