test: ✅ replace many unit tests with property based tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ black = "^24.4.2"
 ruff = "^0.4.5"
 pre-commit = "^3.7.1"
 pyright = "^1.1.364"
+hypothesis = "^6.103.0"
 
 [tool.poetry.scripts]
 ksem-transformer = "ksem_transformer.__main__:main"
