--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -58,9 +58,10 @@ jobs:
         run: |
           poetry install --no-root --with test
 
-      - name: Build with PyInstaller
+      - name: Lint with Ruff
         run: |
           poetry run ruff check --exit-zero --statistics
-      - name: Build with PyInstaller
+
+      - name: Test with Pytest
         run: |
           poetry run pytest
