refactor: use my composite action

--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -2,9 +2,14 @@ name: Build binary with PyInstaller
 
 on: workflow_call
 
+env:
+  POETRY_HOME: ~/poetry
+  POETRY_CACHE_DIR: ~/poetry_cache
+
 jobs:
   build-binary:
     strategy:
+      fail-fast: true
       matrix:
         os:
           - ubuntu-latest
@@ -14,49 +19,13 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Add Poetry to path
-        run: |
-          echo "PATH=~/.local/share/pypoetry/venv/bin:${PATH}" >> $GITHUB_ENV
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: nymphanamusic/cached-poetry-action@HEAD
         with:
+          additional-dependency-groups: '["build"]'
+          poetry-version: ${{ vars.POETRY_VERSION }}
           python-version: ${{ vars.PYTHON_VERSION }}
-
-      - name: Cache Poetry
-        id: cache-poetry
-        uses: actions/cache@v4
-        env:
-          cache-name: cache-poetry
-        with:
-          path: |
-            ~/.local/share/pypoetry
-          key: >
-            ${{ runner.os }}-${{ env.cache-name }}
-
-      - name: Cache Poetry packages
-        id: cache-poetry-packages
-        uses: actions/cache@v4
-        env:
-          cache-name: cache-poetry-packages
-        with:
-          path: |
-            ~/.cache/pypoetry
-          key: >
-            ${{ runner.os }}-${{ env.cache-name }}-${{ vars.PYTHON_VERSION }}
-            -${{ hashFiles('**/pyproject.toml') }}
-
-      - if: ${{ steps.cache-poetry.outputs.cache-hit != 'true' }}
-        name: Install Poetry if not cached
-        run: |
-          curl -sSL https://install.python-poetry.org | python3 -
-
-      - if: ${{ steps.cache-poetry-packages.outputs.cache-hit != 'true' }}
-        name: Install dependencies if not cached
-        run: |
-          poetry install --no-root --with build
 
       - name: Build with PyInstaller
         run: |
